@startuml

    class Produto {
       - id: Long
       - nome: String
       - descricao: String
       - preco: Double
       - estoque: Integer
    }

    class Faixa {


    }

    enum Esporte {
        - JUDO: int
        - JIU: int 
        - CAPOEIRA: int
    }

    enum Tamanho {
        - A1_260: int
        - A2_280: int 
        - A3_300: int
        - A4_320: int 
        - A5_340: int
    }

    class Usuario {
        - id: Long
        - nome: String 
        - email: String
        - senha: String 
        - cpf: String 
    }

    class Telefone {
        - id: Long
        - codigoArea: String
        - numero: String
    }

    class Compra {
        - id: Long
        - data: Date
        - totalCompra: Double
    }

    class ItemCompra {
        - id: Long
        - quantidade: Integer
        - preco: Double
    }

    class Endereco {
        - id: Long
        - principal: Boolean
        - logradouro: String
        - bairro: String 
        - numero: String 
        - complemento: String
        - cep: String 
    }

    class Municipio {
        id: Integer
        nome: String
    }

    class Estado {
        - id: Integer
        - nome: String
        - sigla: String
    }

    Faixa  -up-|> Produto

    Faixa "*" --> "1" Tamanho
    Faixa "*" --> "1" Esporte

    Usuario "*" --> "*" Produto: listaDesejo
    Usuario "1" *--> "1" Telefone: celular
    Usuario "1" *--> "1" Telefone: whatszap
    Usuario "1" *--> "*" Endereco

    Compra "1" *--> "*" ItemCompra
    Compra "*" --> "1" Usuario
    Compra "*"  --> "1" Endereco

    ItemCompra "*" --> "1" Produto

    Endereco "*" --> "1" Municipio
    
    Municipio "*" --> "1" Estado


@enduml